added version to composer.json

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,7 @@
         }
     },
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "namu/contact":"1.0@dev"
+    }
 }
