--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,5 @@
         }
     },
     "minimum-stability": "dev",
-    "require": {
-        "namu/contact":"1.0@dev"
-    }
+    "require": {}
 }
